apps/talos_cluster/persephone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persephone
  namespace: persephone
spec:
  progressDeadlineSeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: persephone
  template:
    metadata:
      labels:
        app: persephone
    spec:
      containers:
        - name: persephone
          image: ghcr.io/mtrnord/persephone:main
          imagePullPolicy: Always
          resources:
            limits: {}
            requests:
              memory: "344Mi"
              cpu: "252m"
          ports:
            - containerPort: 8008
              name: web
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /data/config.yaml
              subPath: config.yaml
            - mountPath: /tmp
              name: tmp
          livenessProbe:
            httpGet:
              path: /_matrix/federation/v1/version
              port: web
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /_matrix/federation/v1/version
              port: web
              scheme: HTTP
          startupProbe:
            httpGet:
              path: /_matrix/federation/v1/version
              port: web
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 2048Mi
        - name: data
          persistentVolumeClaim:
            claimName: persephone-data
        - name: config
          configMap:
            name: persephone-config
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: persephone
spec:
  selector:
    app: persephone
  ports:
    - name: web
      port: 8008
      targetPort: 8008
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: persephone
  namespace: persephone
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - persephone.midnightthoughts.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix/server
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: server-wellknown
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: persephone-matrix
  namespace: persephone
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - matrix.persephone.midnightthoughts.space
  rules:
    - backendRefs:
        - name: persephone
          port: 8008
      timeouts:
        request: 240s
        backendRequest: 0s
